--- a/info.yaml
+++ b/info.yaml
@@ -1,8 +1,8 @@
 # Tiny Tapeout project information (Wokwi project)
 project:
-  wokwi_id:     0       # Set this to the ID of your Wokwi project (the number from the project's URL)
-  title:        ""      # Project title
-  author:       ""      # Your name
+  wokwi_id:     380039701678002177       # Set this to the ID of your Wokwi project (the number from the project's URL)
+  title:        "Semaforo Demo"      # Project title
+  author:       "Camilo Velez"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
   description:  ""      # One line description of what your project does
   language:     "Wokwi" # other examples include SystemVerilog, Amaranth, VHDL, etc
@@ -20,14 +20,14 @@ pinout:
   ui[3]: ""
   ui[4]: ""
   ui[5]: ""
-  ui[6]: ""
+  ui[6]: "In6"
   ui[7]: ""
 
   # Outputs
   uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
+  uo[1]: "S1"
+  uo[2]: "S2"
+  uo[3]: "s3"
   uo[4]: ""
   uo[5]: ""
   uo[6]: ""
